# Newton

./: .gitignore  .pre-commit-config.yaml  00_setup.ipynb  00_setup_colab.ipynb  00_setup_kaggle.ipynb  10_hanging_bar.ipynb  10_stage_a_analysis.ipynb  15_material.ipynb  20_contact.ipynb  20_indentation.ipynb  20_stage_b_analysis.ipynb  25_dynamic.ipynb  30_convergence.ipynb  30_convergence_analysis.ipynb  40_friction.ipynb  40_friction_analysis.ipynb  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
common/: mesh_io.py  params.py
compare/: convergence.py  drop.py  energies.py  friction.py  metrics.py  stage_b.py  stress_strain.py
data/: diffsim.npz  fem_convergence.npz  fem_drop.npz  fem_friction.npz  fem_indentation.npz  fem_result.npz  fem_result_hex.npz  fem_stress_strain.npz  mesh.npz  newton_convergence.npz  newton_drop.npz  newton_drop_semi.npz  newton_drop_vbd.npz  newton_friction.npz  newton_friction_semi.npz  newton_friction_vbd.npz  newton_indentation.npz  newton_indentation_semi.npz  newton_indentation_vbd.npz  newton_result.npz  newton_result_semi.npz  newton_result_vbd.npz  newton_stress_strain.npz
docs/: CONTACT.md  EXPERIMENTS.md  METHOD.md  STATUS.md
fenics_run/: convergence_stage_a.py  run_drop.py  run_friction.py  run_stage_a.py  run_stage_b.py  run_stress_strain.py
figures/: hanging_bar_report.txt
kaggle/: kagglehub_sync.py  kernel-metadata.json  run_on_kaggle.py
logs/: summary.txt
newton_run/: convergence_stage_a.py  diffsim_stage_a.py  example_rigid_soft_contact.py  run_friction.py  run_stage_a.py  run_stage_b.py  run_stress_strain.py
src/common/: params.py  runlog.py
src/compare/: convergence.py  drop.py  energies.py  friction.py  hanging_bar.py  indentation.py  scene.py  stress_strain.py  style.py
src/fenics_run/: convergence.py  run_drop.py  run_friction.py  run_hanging_bar.py  run_indentation.py  run_stress_strain.py
src/newton_run/: _solver.py  convergence.py  diffsim.py  run_drop.py  run_friction.py  run_hanging_bar.py  run_indentation.py  run_stress_strain.py
tests/: test_energies.py
